# SO2

./: .gitignore  CMakeLists.txt  LAB1.cpp  LAB3.cpp  README.md  Variables.h  main.cpp
app/: Calculator.cpp  Calculator.h  RandomPicker.cpp  RandomPicker.h  main.cpp
app/core/: Calculator.cpp  Monitor.cpp  Writer.cpp
app/headers/: Calculator.h  Converter.h  Counter.h  FileText.h  Monitor.h  Process.h  RandomPicker.h  Writer.h
app/utils/: Converter.cpp  Counter.cpp  FileText.cpp  Process.cpp  RandomPicker.cpp
utils/: Counter.cpp  Counter.h  Process.cpp  Process.h
